manifests/blue-green/backend-ing.yaml
#k patch ing backend --patch '{"spec":{"rules":[{"host":"backend.user0.k8z.eu","http":{"paths":[{"backend":{"service":{"name":"green","port":{"number":80}}},"path":"/","pathType":"ImplementationSpecific"}]}}]}}'
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
spec:
  rules:
  -   host: backend.user0.k8z.eu
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: blue
                port:
                  number: 80
